# helm-apps

./: .gitignore  AGENTS-DEV.md  AGENTS.md  CHANGELOG.md  Makefile  README.md  index.yaml
.github/workflows/: backfill-release-notes.yml  ci.yml  release.yml
Formula/: happ.rb
charts/helm-apps/: Chart.yaml
cmd/happ/: .golangci.yml  README.md  go.mod  main.go
cmd/happ-rs/: -  Cargo.toml  README.md  build.rs
cmd/happ-rs/assets/: codemirror.bundle.js
cmd/happ-rs/benches/: query_bench.rs
cmd/happ-rs/src/: assets.rs  cli.rs  composeimport.rs  composeinspect.rs  convert.rs  dyfflike.rs  inspectweb.rs  main.rs  output.rs  query.rs  service.rs  source.rs  verify.rs  yamlmerge.rs
cmd/happ-rs/tests/: parity_cli.rs
cmd/happ-rs/tests/compat/: YQ_PAIN_MATRIX.md  jq-cases.yaml  yq-cases.yaml  yq-yaml-spec-issues.yaml
cmd/happ-rs/tests/parity/fixtures/: compose.yaml  invalid-values.yaml  manifests.yaml
cmd/happ-rs/web/: codemirror-entry.js  package-lock.json  package.json  playwright.config.mjs
cmd/happ-rs/web/tests/: e2e.spec.mjs  helpers.mjs  structure.spec.mjs  visual.spec.mjs
cmd/happ-rs/web/tests/baseline/: ui-structure-baseline.json
docs/: README.md  architecture.md  cookbook.md  decision-guide.md  faq.md  flant-pr-draft.md  glossary.md  k8s-fields-guide.en.md  k8s-fields-guide.md  library-guide.md  operations.md  parameter-index.md  quickstart.md  reference-values.md  stability.md  use-case-map.md  werf-build-report.md
docs/ai/: helm-apps-capabilities.prompt.md
extensions/helm-apps/: README.md  package-lock.json  (+3 more)
scripts/: check-contracts.sh  check-entity-coverage.sh  ci-local.sh  fuzz-contracts.sh  generate-capabilities-prompt.sh  semantic-yaml-diff-zq.sh  test-capabilities-catalog.sh  validate-yaml-stream.rb  verify-contracts-structure.rb
tests/: test_render.yaml
(+104 files in other folders)
