[package]
name = "happ"
version = "1.8.2"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
indexmap = { version = "2", features = ["serde"] }
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "query_bench"
harness = false
